fix: Remove the gap between hearts on profiles

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1612,7 +1612,7 @@ details[open] .details-close {
 .heart-display__grid {
   display: flex;
   flex-wrap: wrap;
-  gap: 0.5rem;
+  gap: 0.25rem;
 }
 
 .heart-picker__heart {
